# bs_homework

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
bs/: asgi.py  settings.py  urls.py  wsgi.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: __init__.py  order_serializers.py
order/tests_viewsets/: __init__.py  tests_order_viewsets.py
order/viewsets/: __init__.py  order_viewsets.py
product/: factories.py  tests.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializers.py  product_serializers.py
product/tests_viewsets/: tests_category_viewsets.py  tests_product_viewsets.py
product/viewsets/: __init__.py  category_viewsets.py  product_viewsets.py
